2004-03-21  Stefan Jahn  <stefan@lkcc.org>

	* equation.cpp (reorderEquations): The function reorders 
	equations and determines whether they can be evaluated or not
	in this new order.

2004-03-20  Stefan Jahn  <stefan@lkcc.org>

	* strlist.cpp (toString, join): Two new functions.  One for
	returning a string representation of a string list and the
	other for joining two string lists.

	* equation.cpp (detectCycles, findDuplicate): New functions
	determining whether there are or duplicate cyclic equations.

2004-03-14  Stefan Jahn  <stefan@lkcc.org>

	* equation.cpp: Started to implement the equation checker.

2004-03-08  Stefan Jahn  <stefan@lkcc.org>

	* scan_netlist.l: Introduced new EQN state for parsing 
	equations in netlists.  The parser+scanner is now working 
	correctly.

2004-03-07  Stefan Jahn  <stefan@lkcc.org>

	* parse_netlist.y: Added parser and scanner rules for 
	equations inside netlists.

2004-02-18  Stefan Jahn  <stefan@lkcc.org>

	* eqnsys.cpp (solve_lu): New equation system solver implemented
	using so called LU decomposition.

2004-02-17  Stefan Jahn  <stefan@lkcc.org>

	* eqnsys.cpp (solve_gauss_jordan): New solution method for
	linear equation systems implemented.

	* Makefile.am (libqucsator_a_SOURCES): The libqucsator library
	can be used by the Qucs GUI in order to handle datasets.  The
	header 'libqucsator.h' must be included.

2004-02-16  Stefan Jahn  <stefan@lkcc.org>

	* operatingpoint.cpp: New class representing an operating
	point of a non-linear component.

	* circuit.cpp: Added the functionality in order to handle
	the operating point of non-linear components.

	* object.cpp (hasProperty): New function checking whether an
	object has a certain property or not.

	* dcsolver.cpp: Generalized the G matrix creation to apply
	also to components with more than two ports.

	* circuit.cpp (setY, getY): Made these functions depending on
	the specified port numbers.

2004-02-15  Stefan Jahn  <stefan@lkcc.org>
